fix invisible tabs'

--- a/safespace/my-app/src/App.css
+++ b/safespace/my-app/src/App.css
@@ -241,3 +241,8 @@
 .contactUsLink {
   text-decoration: none;
 }
+
+.tabContainer {
+    background-color: white;
+    color: black;
+}
